# mao

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  PYPI_SETUP.md  Procfile  README.md  docker-compose.yml  mcp.json  mcp_config.duckdb.wal  package-lock.json  package.json  pyproject.toml
.github/: COPILOT_CONFIGURATION.md  COPILOT_README.md  copilot-instructions.md  dependabot.yml  setup.yml
.github/agents/: agent-orchestrator.agent.md  api-architect.agent.md  async-python-expert.agent.md  database-specialist.agent.md  llm-integration-specialist.agent.md  mcp-integration-expert.agent.md  rag-developer.agent.md  test-engineer.agent.md  vector-store-engineer.agent.md
.github/copilot/: AGENTS.md  agents.yaml
.github/instructions/: api-endpoints.instructions.md  mcp-integration.instructions.md  rag-system.instructions.md  test-files.instructions.md
.github/workflows/: dependency-update.yml  docker-build.yml  docker-multi-platform.yml  integration-tests.yml  monitor-actions-usage.yml  publish.yml  test-lint.yml  unit-tests.yml
data/: .gitkeep
docker/: Dockerfile.api
src/mao/: __init__.py  agents.py  mcp.py  py.typed  rag-system.py  storage.py  tools.py
src/mao/api/: __init__.py  agents.py  api.py  db.py  helpers.py  mcp.py  models.py  storage.py  teams.py
tests/: __init__.py  conftest.py  test_agents.py  test_mcp.py  test_storage.py
tests/api/: __init__.py  test_agents_api.py  test_api.py  test_live_api.py  test_mcp_api.py  test_teams_api.py
