[project]
name = "mao"
version = "0.1.0"
description = "MCP Agent Orchestra - A modern framework for orchestrating AI agents"
readme = "README.md"
authors = [
    { name = "Björn Bethge", email = "" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-core>=2.16.1",
    "qdrant-client>=1.14.0",
    "duckdb>=1.2.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
    "openai>=1.78.0",
    "anthropic>=0.51.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-mcp-adapters>=0.0.11",
    "langgraph>=0.1.0",
    "langgraph-supervisor>=0.0.21",
    "typing-extensions>=4.13.0",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=25.0.0",
    "mypy>=1.6.1",
    "ruff>=0.11.0"
]

[tool.uv]
python-preference = "only-managed"
python-downloads = "automatic"
link-mode = "copy"
compile-bytecode = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
